<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="279dp"
        android:layout_height="339dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/cad"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="quantityDecrease"
            android:text="@string/decrease" />


        <TextView
            android:id="@+id/quantity_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14sp" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="quantityIncrease"
            android:text="@string/increase" />

    </LinearLayout>

    <TextView
        android:id="@+id/description1_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#B6DFFF"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/subtotal" />

        <TextView
            android:id="@+id/subtotal_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#93CFFE"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="100dp"/>

        <Button
            android:id="@+id/addToCart_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addToCart"
            android:text="@string/addToCart_Text" />


    </LinearLayout>


</LinearLayout>